# exp

./: .gitignore  README.md  pyproject.toml
data/: check_data.ipynb
llm_prompts/: system.md  user.md  vanilla_system.md  vanilla_user.md
llm_prompts/content/: Content_1_2_8.md  Content_3_4.md  Content_5_6.md  Content_7.md
llm_prompts/conventions/: Conventions_1_2_8.md  Conventions_7.md
llm_prompts/language/: Language_3_4.md  Language_5_6.md
llm_prompts/narrativity/: Narrativity_3_4.md  Narrativity_5_6.md
llm_prompts/organization/: Organization_1_2_8.md  Organization_7.md
llm_prompts/prompt_adherence/: Prompt_Adherence_3_4.md  Prompt_Adherence_5_6.md
llm_prompts/sentence_fluency/: Sentence_Fluency_1_2_8.md
llm_prompts/style/: Style_7.md
llm_prompts/voice/: Voice_8.md
llm_prompts/word_choice/: Word_Choice_1_2_8.md
src/: 01_annotation.py  02_01_train_ranknet.py  02_02_train_multiattr_ranknet.py  90_vanilla_zero.ipynb  run_annotation.sh  run_ranknet.sh
src/models/: distribution_estimation.py  ot_calibration.py  ranknet_utils.py
src/utils/: gemma_api.py  gpt_api.py  helper.py
