[project]
name = "lces"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "fastexcel>=0.16.0",
    "huggingface-hub>=0.36.0",
    "ipykernel>=6.30.1",
    "openai>=1.109.1",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tiktoken>=0.11.0",
    "timm>=1.0.21",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "umap-learn>=0.5.9.post2",
]
